# py-libpuzzle

./: .gitattributes  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.rst  _libpuzzle.c  _libpuzzle.pyx  libpuzzle.c  libpuzzle.pyx  setup.cfg  setup.py
libpuzzle/: __init__.py  _version.py  bases.c  bases.pyx
tests/: test_high.py  test_puzzle.py
