[metadata]
description-file = README.rst

[coverage:run]
plugins = Cython.Coverage

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = libpuzzle/_version.py
versionfile_build = libpuzzle/_version.py
tag_prefix = v
